Update chaining logic

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <button class="operator">-</button>
     <button class="operator">*</button>
     <button class="operator">/</button>
-    <button class="equals">=</button>
-    <button class="clear">Clear</button>
+    <button id="equals">=</button>
+    <button id="clear">Clear</button>
+    <script src="script.js"></script>
   </body>
 </html>
