--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <button class="operator">-</button>
     <button class="operator">*</button>
     <button class="operator">/</button>
+    <button id="backspace">←</button>
     <button id="equals">=</button>
     <button id="clear">Clear</button>
     <script src="script.js"></script>
